--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,71 @@
 .App {
   text-align: center;
 }
-
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+  width: 250px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.App-link {
+  color: #61dafb;
 }
-
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #282c34;  
   display: flex;
-  flex-direction: column;
+  flex-direction: center;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
 }
+.App-card {  
+  padding-top: 75px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  justify-content: center;
+}
+.card{
+  width: 225px;
+  height: 250px;  
+  border-radius: 15px; 
+  border: 2px solid black;
+  background-color: white;  
+}
+.card:hover {
+  background-color: #282c34;
+  color: white;
+}
+/* .dispoType{
+  
+  align-items: center;
 
-.App-link {
-  color: #61dafb;
+} */
+.fondType{
+  width: 50px;
+  height: 25px;
+  border-radius: 15px;
+  align-items: center;
+  border: 2px solid black;
+  background-color: red;
+}
+#inputPokémon {
+  flex-direction: right;  
+  width: 200px;
+  height:25px;
+  padding: 10px 15px;
+  margin-left: 150px;
+  border-radius: 15px;
+  border: 1px solid black;
+  background-color: #282c34;
+  color: white;
+}
+h2{
+  padding: 10px;
+  color: black;
+}
+img{
+  width: 100px;
+  height: 100px;
+  padding: 0px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
