--- a/src/App.css
+++ b/src/App.css
@@ -67,5 +67,11 @@ img{
   height: 100px;
   padding: 0px;
 }
+.CardContent {
+  transition: transform 1s;
+}
 
+.CardContent.flipped {
+  transform: rotateY(180deg);
+}
 
